[tool.poetry]
name = "retirement-planner"
version = "0.1.0"
description = ""
authors = ["Tim McFadden <mtik00@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.47.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^24.1.1"
ipdb = "^0.13.13"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
